# multi_mobile

./: frames_2024-10-06_12.59.32.gv
install/: local_setup.sh  setup.sh
install/cmd_initial/lib/cmd_initial/: initial_cmd
install/cmd_initial/share/cmd_initial/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_interfaces/share/custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/custom_interfaces/share/custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  custom_interfacesConfig-version.cmake  custom_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/custom_interfaces/share/custom_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/custom_interfaces/share/custom_interfaces/msg/: RobotState.idl  RobotState.msg
install/mobile_controller/lib/mobile_controller/: consensus_controller  controller  laplacian_algorithm  state_communicate  talker
install/mobile_controller/share/mobile_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_bot/share/my_bot/: package.sh  package.xml
install/my_bot/share/my_bot/launch/: controller.launch.py  multi_turtle3.launch.py  rsp.launch.py
install/turtlebot3/share/turtlebot3/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_description/share/turtlebot3_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_description/share/turtlebot3_description/environment/: path.dsv  (+1 more)
log/: latest_build
src/cmd_initial/: package.xml  setup.cfg  setup.py
src/cmd_initial/cmd_initial/: initial_cmd.py
src/custom_interfaces/: CMakeLists.txt  package.xml
src/mobile_controller/: package.xml  setup.py
src/mobile_controller/mobile_controller/: consensus_controller.py  laplacian_algorithm.py
src/my_bot/: package.xml  setup.py
src/my_bot/launch/: controller.launch.py  multi_turtle3.launch.py  rsp.launch.py
src/turtlebot3/: package.xml  setup.py
src/turtlebot3_description/: CMakeLists.txt  package.xml
src/turtlebot3_description/urdf/: turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_for_open_manipulator.gazebo.xacro
(+53 files in other folders)
