################################################################################
# Set minimum required version of CMake, project name, and compile options
################################################################################
cmake_minimum_required(VERSION 3.5)
project(turtlebot3_description)

################################################################################
# Find ament packages and libraries for ament and system dependencies
################################################################################
find_package(ament_cmake REQUIRED)
find_package(urdf REQUIRED)
find_package(xacro REQUIRED)

################################################################################
# Setup for Python modules and scripts (if needed)
################################################################################

################################################################################
# Declare ROS messages, services, and actions (if needed)
################################################################################

################################################################################
# Declare ament specific configuration to be passed to dependent projects
################################################################################
ament_package()

################################################################################
# Install
################################################################################
install(DIRECTORY meshes rviz urdf
  DESTINATION share/${PROJECT_NAME}
)

################################################################################
# Test (if needed)
################################################################################
